--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/lo">
 
-
-    <TextView android:text = "Login" android:layout_width="wrap_content"
-        android:layout_height = "wrap_content"
-        android:id = "@+id/textview"
-        android:textSize = "35dp"
-        android:layout_alignParentTop = "true"
-        android:layout_centerHorizontal = "true" />
 
     <TextView
+        android:id = "@+id/textView"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
-        android:text = "Tutorials point"
-        android:id = "@+id/textView"
-        android:layout_below = "@+id/textview"
+        android:text = "INICIA SESIÓN"
         android:layout_centerHorizontal = "true"
         android:textColor = "#ff7aff24"
-        android:textSize = "35dp" />
+        android:textSize = "30dp" />
 
 
     <EditText
@@ -76,13 +69,7 @@
         android:layout_toLeftOf="@+id/textview"
         android:text="login" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        tools:srcCompat="@tools:sample/avatars" />
+
+
 
 </RelativeLayout>
