--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/lo">
+    android:background="@drawable/ffo">
 
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_height = "wrap_content"
         android:text = "INICIA SESIÓN"
         android:layout_centerHorizontal = "true"
-        android:textColor = "#ff7aff24"
+        android:textColor = "#E7D40A"
         android:textSize = "30dp" />
 
 
@@ -22,11 +22,11 @@
         android:id="@+id/editText"
         android:layout_width="330dp"
         android:layout_height="60dp"
+
         android:layout_centerInParent="true"
         android:layout_marginTop="157dp"
         android:layout_marginEnd="-1dp"
         android:background="#E7D40A"
-
         android:focusable="true"
         android:hint="Enter Name"
         android:textSize="24dp" />
@@ -51,8 +51,10 @@
         android:layout_below="@id/editText2"
        android:layout_centerInParent="true"
         android:layout_marginTop="27dp"
-        android:background="#E36B2C"
+        android:background="#EF280F"
         android:text="login" />
+
+
 
 
 </RelativeLayout>
