--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".registro"
-    android:orientation="vertical"
     android:background="@drawable/ffo">
+
+
     <TextView
         android:id = "@+id/registro"
         android:layout_width = "wrap_content"
@@ -93,6 +92,7 @@
 
     <Button
         android:id="@+id/button"
+        android:onClick="evento_registro"
         android:layout_width="222dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/genero"
