--- a/app/src/main/res/layout/lista_permisos.xml
+++ b/app/src/main/res/layout/lista_permisos.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp">
     <TextView
@@ -9,15 +10,16 @@
         android:layout_centerInParent="true"
         android:text="permiso"
         android:textSize="30dp"
-        android:id="@+id/text_nombre_permiso"/>
+        android:id="@+id/text_permiso"/>
 
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:scaleX="1"
         android:scaleY="1"
-        android:id="@+id/switch_permiso"/>
+        android:id="@+id/switch_permiso"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 </RelativeLayout>
