--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,24 +19,24 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/edit_email_l"
         android:layout_width="330dp"
         android:layout_height="60dp"
         android:layout_centerInParent="true"
-        android:layout_marginTop="157dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="-1dp"
         android:background="#E7D40A"
         android:focusable="true"
-        android:hint="Enter Name"
+        android:hint="Enter Email"
         android:textSize="24dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edit_password_l"
         android:layout_width="330dp"
         android:layout_height="60dp"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/edit_email_l"
         android:layout_centerInParent="true"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="1dp"
         android:background="#E7D40A"
         android:hint="Password"
@@ -45,14 +45,38 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:onClick="evento_pasada"
+        android:onClick="evento_login"
         android:layout_width="222dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editText2"
+        android:layout_below="@id/edit_password_l"
        android:layout_centerInParent="true"
         android:layout_marginTop="27dp"
         android:background="#EF280F"
         android:text="login" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="or"
+        android:textSize="20dp"
+        android:textColor="#E7D40A"
+        android:layout_below="@id/btn_login"
+        android:layout_centerInParent="true"
+        android:id="@+id/or"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create Acount?"
+        android:onClick="evento_registro_cambio"
+        android:textSize="20dp"
+        android:textColor="#E7D40A"
+        android:layout_below="@id/or"
+        android:layout_centerInParent="true"
+        />
+
+
 
 
 
