--- a/app/src/main/res/layout/activity_reclycler.xml
+++ b/app/src/main/res/layout/activity_reclycler.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ReclyclerActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv_permisos">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
