--- a/app/src/main/res/layout/lista_permisos.xml
+++ b/app/src/main/res/layout/lista_permisos.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp">
+    android:layout_height="90dp"
+    tools:context=".ReclyclerActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="permiso"
+        android:text="Camara"
         android:textSize="20dp"
-        android:id="@+id/text_permiso"/>
+        android:id="@+id/text_permiso1"/>
 
     <Switch
         android:layout_width="wrap_content"
@@ -19,7 +20,30 @@
         android:layout_centerInParent="true"
         android:scaleX="1"
         android:scaleY="1"
-        android:id="@+id/switch_permiso"
+        android:id="@+id/switch_permiso1"
+        android:onClick="evento_switch"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Contactos"
+        android:layout_below="@id/text_permiso1"
+        android:textSize="20dp"
+        android:id="@+id/text_permiso2"/>
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/switch_permiso1"
+        android:scaleX="1"
+        android:scaleY="1"
+        android:id="@+id/switch_permiso2"
+        android:onClick="evento_switch"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 </RelativeLayout>
