--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/ffo">
+    android:background="@drawable/OO">
 
-
-    <TextView
-        android:id = "@+id/textView"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:text = "INICIA SESIÓN"
-        android:layout_centerHorizontal = "true"
-        android:textColor = "#E7D40A"
-        android:textSize = "30dp" />
 
 
     <EditText
@@ -25,9 +16,10 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="-1dp"
-        android:background="#E7D40A"
         android:focusable="true"
+        android:background="#7E57C2"
         android:hint="Enter Email"
+        android:textColorHint="#EDE7F6"
         android:textSize="24dp" />
 
     <EditText
@@ -38,10 +30,11 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="1dp"
-        android:background="#E7D40A"
+        android:background="#7E57C2"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textSize="24dp" />
+        android:textSize="24dp"
+        android:textColorHint="#EDE7F6"/>
 
     <Button
         android:id="@+id/btn_login"
@@ -51,7 +44,8 @@
         android:layout_below="@id/edit_password_l"
        android:layout_centerInParent="true"
         android:layout_marginTop="27dp"
-        android:background="#EF280F"
+        android:background="#9575DC"
+        android:textColor="#EDE7F6"
         android:text="login" />
 
     <TextView
@@ -59,7 +53,7 @@
         android:layout_height="wrap_content"
         android:text="or"
         android:textSize="20dp"
-        android:textColor="#E7D40A"
+        android:textColor="#000000"
         android:layout_below="@id/btn_login"
         android:layout_centerInParent="true"
         android:id="@+id/or"
@@ -71,7 +65,7 @@
         android:text="Create Acount?"
         android:onClick="evento_registro_cambio"
         android:textSize="20dp"
-        android:textColor="#E7D40A"
+        android:textColor="#000000"
         android:layout_below="@id/or"
         android:layout_centerInParent="true"
         />
