--- a/app/src/main/res/layout/eleccion_accion.xml
+++ b/app/src/main/res/layout/eleccion_accion.xml
@@ -33,16 +33,8 @@
         android:layout_height="150dp"
         android:layout_column="1"
         android:layout_row="1"
-        android:background="@drawable/T_Hu" />
+        android:background="@drawable/tempeee" />
 
-    <TextView
-
-        android:layout_width="197dp"
-        android:layout_height="87dp"
-        android:layout_marginLeft="10dp"
-        android:text="Temperatura y Humedad"
-        android:textColor="#000000"
-        android:textSize="33dp" />
 
 
 
@@ -57,7 +49,7 @@
         android:layout_row="1"
         android:layout_marginTop="70dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/focoEn"
+        android:background="@drawable/foco"
         android:backgroundTint=""
         android:tint="@android:color/background_light" />
 
